# sampler

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
src/: base.rs  engine.rs  format.rs  main.rs  processing.rs  test.rs
src/base/: audio_engine.rs  audio_processor.rs  midi_engine.rs  midi_message.rs  midi_receiver.rs  parameter.rs  processor_proxy.rs
src/engine/: cpal_audio_engine.rs  cpal_processor.rs  midir_midi_engine.rs
src/format/: sfz_loader.rs
src/processing/: sampler.rs  sine.rs
src/processing/sampler/: audio_file_sound.rs  audio_file_voice.rs  linear_adsr.rs  oscillator_sound.rs  oscillator_voice.rs  sampler_sound.rs  sampler_voice.rs
src/test/: dummy_processor.rs  dummy_voice.rs  test.sfz  test_sine.py
