[package]
name = "sampler"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://soakyaudio.com/"
repository = "https://github.com/soakyaudio/sampler"
readme = "README.md"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.5"
hound = "3.4.0"
midir = "0.8.0"
ringbuf = "0.2.8"
sofiza = "0.2.3"

[patch.crates-io]
sofiza = { path = "/Users/deermichel/Desktop/sofiza" }
