[package]
name = "sampler"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://soakyaudio.com/"
repository = "https://github.com/soakyaudio/sampler"
readme = "README.md"
description = "Full-fledged software sampler written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.14.0"
hound = "3.5.0"
midir = "0.8.0"
ringbuf = "0.2.8"
sofiza = "0.3.1"
